--- a/src/Style/home.css
+++ b/src/Style/home.css
@@ -6,6 +6,10 @@
   flex-direction: column;
   justify-content: center;
   padding-left: 9%;
+  background-image: url(../assets/Images/IMAGE.png);
+  background-position: center;
+  background-size: cover;
+  position: relative;
 
   & p {
     font-size: 40px;
@@ -34,6 +38,15 @@
     background-color: #9cf809;
     color: black;
   }
+
+  & .blackBox{
+    width: 150%;
+    height: 19%;
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    right: -1%;
+  }
 }
 
 .impactk {
@@ -44,7 +57,6 @@
   & .leftIm {
     width: 50%;
     height: 100%;
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,7 +64,7 @@
 
     & h3 {
       margin-right: 10%;
-      font-size: 40px;
+      font-size: 35px;
       font-weight: 600;
       color: #3d752a;
     }
@@ -61,27 +73,27 @@
       width: 31%;
       height: 3px;
       background-color: black;
-      margin-right: 18%;
+      margin-right: 13%;
       border: none;
       border-radius: 5px;
       margin-top: 10px;
     }
 
     & p {
-      font-size: 35px;
+      font-size: 30px;
       font-weight: 800;
       margin-top: 10px;
-      margin-left: 20%;
+      margin-left: 19%;
     }
 
     & button {
       width: max-content;
       height: max-content;
-      padding: 10px;
+      padding: 7px;
       font-size: 16px;
       background-color: black;
       border-radius: 10px;
-      margin-right: 29%;
+      margin-right: 22%;
       color: white;
       margin-top: 10px;
       position: relative;
@@ -93,7 +105,6 @@
   & .rightIm {
     width: 50%;
     height: 100%;
-    background-color: greenyellow;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -106,6 +117,11 @@
       background-color: white;
       border-bottom-left-radius: 50%;
       border-bottom-right-radius: 50%;
+      background-image: url(../assets/Images/babies-mums.jpg);
+      background-size: cover;
+      background-position: left;
+      background-repeat: no-repeat;
+      background-position-x: -60px;
     }
 
     & .impact2 {
@@ -115,6 +131,10 @@
       border-bottom-left-radius: 50%;
       border-top-right-radius: 50%;
       border-top-left-radius: 50%;
+      background-image: url(../assets/Images/women.jpg);
+      background-size: cover;
+      background-position: left;
+      background-repeat: no-repeat;
     }
 
     & .impact3 {
@@ -123,6 +143,11 @@
       background-color: white;
       border-top-left-radius: 50%;
       border-top-right-radius: 50%;
+      background-image: url(../assets/Images/image6.png);
+      background-size: cover;
+      background-position: center;
+      background-position-x: -70px;
+      background-repeat: no-repeat;
     }
 
     & .impact4 {
@@ -132,6 +157,11 @@
       border-bottom-right-radius: 50%;
       border-top-right-radius: 50%;
       border-top-left-radius: 50%;
+      background-image: url(../assets/Images/20250227_084623.jpg);
+      background-size: cover;
+      background-position: left;
+      background-repeat: no-repeat;
+      background-position-x: -70px;
     }
   }
 }
@@ -140,11 +170,12 @@
   width: 100%;
   height: 1000px;
   position: relative;
-  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 10px;
+  background-image: url(../assets/Images/group-happy-african-children-drinking-water-from-faucetclean-water-problems_892345-1839.jpg);
+  background-position: center;
+  background-size: cover;
 
   & .button-tag {
     width: max-content;
@@ -156,15 +187,14 @@
     font-weight: 700;
     margin-left: 13.3%;
     position: absolute;
-    top: 7px;
+    top: -30px;
   }
 
   & .parts {
     width: 100%;
-    height: 46%;
-    background-color: yellow;
+    height: 50%;
+    background-color: rgba(0, 0, 0, 0.822);
     display: flex;
-    align-items: center;
     gap: 10px;
     padding-left: 13%;
     flex-direction: row-reverse;
@@ -172,7 +202,10 @@
     & .partK-img {
       width: 73%;
       height: 70%;
-      background-color: white;
+      background-image: url(../assets/Images/cd7684054ec5036b88f97615ab12d5a2.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position-y: -90px;
       border-radius: 20px;
       margin-right: 11.5%;
       margin-left: 2%;
@@ -185,13 +218,16 @@
       align-items: center;
       justify-content: center;
       flex-wrap: wrap;
+      color: rgb(168, 164, 164);
+      font-size: 17px;
+      line-height: 25px;
     }
   }
 
   & .partK {
     width: 100%;
-    height: 46%;
-    background-color: yellow;
+    height: 50%;
+    background-color: rgba(0, 0, 0, 0.822);
     display: flex;
     align-items: center;
     gap: 10px;
@@ -200,7 +236,9 @@
     & .partK-img {
       width: 65%;
       height: 70%;
-      background-color: white;
+      background-image: url(../assets/Images/baby-girl.jpg);
+      background-size: cover;
+      background-position: center;
       border-radius: 20px;
     }
 
@@ -213,6 +251,9 @@
       padding-right: 8%;
       padding-left: 2%;
       flex-wrap: wrap;
+      color: rgb(168, 164, 164);
+      font-size: 17px;
+      line-height: 25px;
     }
   }
 }
@@ -232,6 +273,7 @@
     height: 15%;
     background-color: #3d752a;
     display: flex;
+    margin-top: 5%;
 
     & p {
       width: 40%;
@@ -256,6 +298,12 @@
         width: 22%;
         height: 47%;
         background-color: white;
+
+        & img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
   }
@@ -274,25 +322,24 @@
       flex-direction: column;
       gap: 20px;
 
-
-      & .leftInfo{
+      & .leftInfo {
         height: 33%;
         width: 100%;
         display: flex;
         flex-direction: column;
         gap: 15px;
 
-        & h4{
+        & h4 {
           font-size: 25px;
           color: white;
         }
 
-        & p{
+        & p {
           font-size: 20px;
           color: white;
         }
 
-        & span{
+        & span {
           font-size: 10px;
           color: white;
           margin-left: 5px;
@@ -326,7 +373,9 @@
         width: 100%;
         height: 70%;
         margin-top: 8.4%;
-        background-color: white;
+        background-image: url(../assets/Images/18582082a75a1808ea7c1189e9fbb7b8.jpg);
+        background-size: cover;
+        background-position: center;
       }
     }
   }
