--- a/src/Style/home.css
+++ b/src/Style/home.css
@@ -38,7 +38,7 @@
     color: black;
   }
 
-  & .blackBox{
+  & .blackBox {
     width: 150%;
     height: 19%;
     background-color: black;
@@ -320,6 +320,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      font-size: 70px;
 
       & .leftInfo {
         height: 33%;
@@ -411,6 +412,441 @@
     & button:hover {
       background-color: #9cf809;
       color: black;
+    }
+  }
+}
+
+@media screen and (width <= 450px) {
+  .imgk {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 9%;
+    background-image: url(../assets/Images/IMAGE.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+
+    & p {
+      font-size: 20px;
+      color: white;
+      font-weight: 800;
+      margin-top: 20%;
+      text-align: center;
+      margin-right: 10%;
+    }
+
+    & button {
+      height: max-content;
+      width: max-content;
+      padding: 5px;
+      font-size: 10px;
+      color: white;
+      font-weight: 700;
+      background-color: #3d752a;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      margin-top: 10px;
+      margin-right: 15%;
+      transition: all 1s ease-in-out;
+      cursor: pointer;
+    }
+
+    & button:hover {
+      background-color: #9cf809;
+      color: black;
+    }
+
+    & .blackBox {
+      width: 150%;
+      height: 19%;
+      background-color: black;
+      display: none;
+      position: absolute;
+      bottom: 0;
+      right: -1%;
+    }
+  }
+
+  .impactk {
+    width: 100%;
+    height: 750px;
+    display: flex;
+    flex-direction: column;
+
+    & .leftIm {
+      width: 100%;
+      height: 50%;
+      display: flex;
+
+      & h3 {
+        font-size: 25px;
+        font-weight: 600;
+        color: #3d752a;
+        text-align: center;
+      }
+
+      & hr {
+        width: 35%;
+        height: 3px;
+        background-color: black;
+        border: none;
+        border-radius: 5px;
+        margin-top: 10px;
+        margin-left: 2%;
+      }
+
+      & p {
+        width: 100%;
+        height: 35%;
+        font-size: 20px;
+        font-weight: 800;
+        margin-top: 10px;
+        text-align: center;
+        margin-right: 19%;
+        padding-right: 5%;
+      }
+
+      & button {
+        width: max-content;
+        height: max-content;
+        padding: 7px;
+        font-size: 10px;
+        background-color: black;
+        border-radius: 10px;
+        margin-right: 10%;
+        color: white;
+        margin-top: 15px;
+        position: relative;
+        padding-right: 30px;
+        cursor: pointer;
+      }
+    }
+
+    & .rightIm {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 20px;
+      padding: 24px;
+
+      & .impact1 {
+        width: 47%;
+        height: 45%;
+        background-color: white;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
+        background-image: url(../assets/Images/babies-mums.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-position-x: -20px;
+      }
+
+      & .impact2 {
+        width: 47%;
+        height: 45%;
+        background-color: white;
+        border-bottom-left-radius: 50%;
+        border-top-right-radius: 50%;
+        border-top-left-radius: 50%;
+        background-image: url(../assets/Images/women.jpg);
+        background-size: cover;
+        background-position: left;
+        background-repeat: no-repeat;
+      }
+
+      & .impact3 {
+        width: 47%;
+        height: 45%;
+        background-color: white;
+        border-top-left-radius: 50%;
+        border-top-right-radius: 50%;
+        background-image: url(../assets/Images/image6.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+
+      & .impact4 {
+        width: 47%;
+        height: 45%;
+        background-color: white;
+        border-bottom-right-radius: 50%;
+        border-top-right-radius: 50%;
+        border-top-left-radius: 50%;
+        background-image: url(../assets/Images/20250227_084623.jpg);
+        background-size: cover;
+        background-position:  center;
+        background-repeat: no-repeat;
+        background-position-x: -70px;
+      }
+    }
+  }
+
+  .chealth {
+    width: 100%;
+    height: 1400px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url(../assets/Images/group-happy-african-children-drinking-water-from-faucetclean-water-problems_892345-1839.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-top: 10px;
+
+    & .button-tag {
+      width: max-content;
+      height: max-content;
+      background-color: #3d752a;
+      padding: 10px;
+      font-size: 12px;
+      color: white;
+      font-weight: 700;
+      margin-left: 38%;
+      position: absolute;
+      top: -15px;
+    }
+
+    & .parts {
+      width: 100%;
+      height: 50%;
+      background-color: rgba(0, 0, 0, 0.822);
+      display: flex;
+      gap: 10px;
+      flex-direction: column;
+
+      & .partK-img {
+        width: 73%;
+        height: 70%;
+        background-image: url(../assets/Images/cd7684054ec5036b88f97615ab12d5a2.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-y: -90px;
+        border-radius: 20px;
+        margin-right: 11.5%;
+        margin-left: 2%;
+        display: none;
+      }
+
+      & p {
+        width: 90%;
+        height: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        color: rgb(168, 164, 164);
+        font-size: 17px;
+        line-height: 25px;
+        text-align: center;
+        padding-right: 5%;
+        margin-top: 10%;
+      }
+    }
+
+    & .partK {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.822);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+
+      & .partK-img {
+        width: 100%;
+        height: 100%;
+        background-image: url(../assets/Images/baby-girl.jpg);
+        background-size: cover;
+        background-position: center;
+        border-radius: 20px;
+        margin-top: 10%;
+        margin-right: 15%;
+      }
+
+      & p {
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-wrap: wrap;
+        color: rgb(168, 164, 164);
+        font-size: 17px;
+        line-height: 25px;
+        text-align: center;
+        margin-right: 10%;
+      }
+    }
+  }
+
+  .partnmotto {
+    width: 100%;
+    height: 1000px;
+    background-color: aliceblue;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    gap: 3%;
+
+    & .partners {
+      width: 100%;
+      height: 30%;
+      background-color: #3d752a;
+      display: flex;
+      flex-direction: column;
+      margin-top: 5%;
+
+      & p {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+        font-weight: 700;
+        color: white;
+        padding-top: 10px;
+      }
+
+      & .partLogo {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+        padding: 20px;
+
+        & .box {
+          width: 20%;
+          height: 40%;
+          background-color: white;
+
+          & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+
+    & .goal {
+      width: 90%;
+      height: 45%;
+      background-color: #3d752a;
+      display: flex;
+      margin-left: 20px;
+
+      & .leftG {
+        width: 28.7%;
+        height: 100%;
+        padding: 7%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        & .leftInfo {
+          height: 35%;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          gap: 0;
+          font-size: 25px;
+
+          & h4 {
+            font-size: 10px;
+            color: white;
+          }
+
+          & p {
+            font-size: 10px;
+            color: white;
+          }
+
+          & span {
+            font-size: 6px;
+            color: white;
+            margin-left: 5px;
+            position: relative;
+            cursor: pointer;
+          }
+        }
+      }
+
+      & .rightG {
+        width: calc(100% - 28.7%);
+        height: 100%;
+        background-color: black;
+        padding: 7.7%;
+        display: flex;
+        flex-direction: column;
+
+        & h3 {
+          color: white;
+          font-size: 20px;
+          font-weight: 800;
+
+          & p {
+            font-size: 10px;
+            font-weight: 400;
+            margin-top: 5px;
+          }
+        }
+
+        & .goalImg {
+          width: 100%;
+          height: 70%;
+          margin-top: 8.4%;
+          background-image: url(../assets/Images/18582082a75a1808ea7c1189e9fbb7b8.jpg);
+          background-size: cover;
+          background-position: center;
+        }
+      }
+    }
+
+    & .lastPart {
+      width: 100%;
+      height: 20%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      & p {
+        text-align: center;
+        font-size: 20px;
+        font-weight: 800;
+      }
+
+      & button {
+        height: max-content;
+        width: max-content;
+        padding: 10px;
+        font-size: 14px;
+        color: white;
+        font-weight: 700;
+        background-color: #3d752a;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        margin-top: 20px;
+        transition: all 1s ease-in-out;
+        cursor: pointer;
+      }
+
+      & button:hover {
+        background-color: #9cf809;
+        color: black;
+      }
     }
   }
 }
